[gd_scene load_steps=2 format=3 uid="uid://dshac3vihwpl1"]

[ext_resource type="Script" path="res://Scenes/StartWindow/StartWindow.gd" id="1_on17j"]

[node name="StartWindow" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_on17j")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 352.0
offset_top = 192.0
offset_right = 969.0
offset_bottom = 488.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="LoggingIn" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Log in"

[node name="ContinueAsGuest" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Continue as a guest"

[node name="Quit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Quit"

[connection signal="button_up" from="MarginContainer/VBoxContainer/LoggingIn" to="." method="_on_logging_in_button_up"]
[connection signal="button_up" from="MarginContainer/VBoxContainer/ContinueAsGuest" to="." method="_on_continue_as_guest_button_up"]
[connection signal="button_up" from="MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_button_up"]
